--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           }
           @font-face{
             font-family: "Wii Font";
-            src: url("/system.woff");
+            src: url("system.woff");
           }
           *{
             color:#2c3331;
