--- a/old.html
+++ b/old.html
@@ -13,7 +13,7 @@
 <body>
   Hunter's Cached HTML Launcher<br>
   Important info: There is no longer a dropdown menu. Your application's main HTML file must be named "index.html"<br>
-  <button onclick='window.location.href="/"'>Back to menu</button>
+  <button onclick='window.location.href="../"'>Back to menu</button>
   <button id="fileupload" onclick="getDir()">Select local directory</button>
   <br>
   <code id="finished" style="display: none">Data loaded! You can now return to the menu.</code>
