--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                   console.log("g")
                   //queryCache(name)
                   getCachedUrls(name).then((d) => {
-                    if (d.includes(`${window.location.href}index.html`)) {
+                    if (d.includes(`index.html`)) {
                       console.log("WOW")
                       launchURL = "index.html"
                     }
